--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="top-bar">
       <div class="top-bar-left">
         <ul class="menu">
-          <li class="menu-text">Yeti Agency</li>
+          <li class="menu-text">LSU</li>
           <li><a href="#">One</a></li>
           <li><a href="#">Two</a></li>
         </ul>
@@ -31,10 +31,9 @@
 
     <div class="callout large">
       <div class="row column text-center">
-        <h1>Changing the World Through Design</h1>
+        <h1>Richard Johnson</h1>
         <p class="lead">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Nullam in dui mauris.
+          I DID IT!! :D.
         </p>
         <a href="#" class="button large">Learn More</a>
         <a href="#" class="button large hollow">Learn Less</a>
@@ -46,35 +45,25 @@
         <img class="thumbnail" src="https://placehold.it/750x350">
       </div>
       <div class="medium-6 columns medium-pull-6">
-        <h2>Our Agency, our selves.</h2>
-        <p>
-          Vivamus luctus urna sed urna ultricies ac tempor dui sagittis.
-          In condimentum facilisis porta. Sed nec diam eu diam mattis viverra.
-          Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris,
-          quis sollicitudin sapien justo in libero. Vestibulum mollis mauris enim.
-          Morbi euismod magna ac lorem rutrum elementum. Donec viverra auctor.
+        <h2>Why are iPhone chargers not called Apple Juice?!.</h2>
+        <p style="background-color:mediumpurple;"
+          >I made this mediumpurple.
         </p>
       </div>
     </div>
 
     <div class="row">
       <div class="medium-4 columns">
-        <h3>Photoshop</h3>
-        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis.
-        In condimentum facilisis porta. Sed nec diam eu diam mattis viverra.
-        Nulla fringilla, orci ac euismod semper, magna.</p>
+        <h3>Windows</h3>
+        <p>Favorite Linux Distro is Mint and openSUSE.</p>
       </div>
       <div class="medium-4 columns">
-        <h3>Javascript</h3>
-        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis.
-        In condimentum facilisis porta. Sed nec diam eu diam mattis viverra.
-        Nulla fringilla, orci ac euismod semper, magna.</p>
+        <h3>ANACONDA</h3>
+        <p style="background-color:DodgerBlue;">I made this blue.</p>
       </div>
       <div class="medium-4 columns">
-        <h3>Marketing</h3>
-        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis.
-        In condimentum facilisis porta. Sed nec diam eu diam mattis viverra.
-        Nulla fringilla, orci ac euismod semper, magna.</p>
+        <h3>Visual Studio Code</h3>
+        <p>insert a bunch of words!!.</p>
       </div>
     </div>
 
@@ -82,18 +71,19 @@
 
     <div class="row column">
       <ul class="vertical medium-horizontal menu expanded text-center">
-        <li><a href="#"><div class="stat">28</div><span>Websites</span></a></li>
-        <li><a href="#"><div class="stat">43</div><span>Apps</span></a></li>
-        <li><a href="#"><div class="stat">95</div><span>Ads</span></a></li>
-        <li><a href="#"><div class="stat">59</div><span>Cakes</span></a></li>
-        <li><a href="#"><div class="stat">18</div><span>Logos</span></a></li>
+        <li><a href="#"><div class="stat">1</div><span>Websites</span></a></li>
+        <li><a href="#"><div class="stat">0</div><span>Apps</span></a></li>
+        <li><a href="#"><div class="stat">420 :(</div><span>Ads</span></a></li>
+        <li><a href="#"><div class="stat">no</div><span>Cakes</span></a></li>
+        <li><a href="#"><div class="stat">simple</div><span>Logos</span></a></li>
       </ul>
     </div>
 
     <hr>
 
     <div class="row column">
-      <h3>Our Recent Work</h3>
+      <h3>My Recent Work</h3>
+      
     </div>
 
     <div class="row medium-up-3 large-up-4">
